# gitgrade

./: Cargo.toml  README.md
.github/workflows/: build.yml  main.yml
docs/: index.html
src/: analyzer.rs  main.rs  watcher.rs
