[package]
name = "gitgrade"
description = "Automatic coding habit tracker — git history + file activity"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = { version = "0.19", features = ["vendored-openssl"] }
notify = "6.1"
